# gsp-sim-bench

./: .gitignore  README.md  grade_one.py  grade_shard.py  pyproject.toml  requirements.txt
.github/workflows/: agent2.yml  agent2_screen.yml  bench.yml  ci.yml  grader.yml  grader100k.yml  heavy-sims.yml
docs/: d1-hunt-findings.md  dummy2-search-findings.md  strategy.md  submission-config.md  task2-and-peer-robustness-findings.md
docs/explorations/: ab_pacing_agent2.py  benchmark_hybrid_task1.py  measure_descent_regression.py  multiblock_diag_agent1.py  paired_significance.py  paired_significance_agent2.py  robustness_agent1.py  screen_d2raise.py  validate_all_candidates.py  validate_port.py  xblock_check.py
fixtures/: CONSTANTS.py  id_123456789_987654321.py  id_dummy_1.py  id_dummy_2.py  id_dummy_3.py  server.py
harness/: README.md  _progress.py  agent2_candidates.py  benchmark.py  benchmark_agent2.py  benchmark_variants.py  ci_sample_size.py  compare.py  d2_hunt.py  diagnose.py  dummy1_hunt.py  exp_alpha.py  exp_paired.py  exp_raisecost.py  exp_smart.py  exp_treatment.py  exp_valueaware.py  freeze_baseline.py  latency_probe.py  margin_agent.py  mutation_test.py  replica_sim.py  robust_agent.py  robust_raise_agent.py  tournament.py
src/hw3/: __init__.py  agent1.py  agent2.py  descent.py  strategy.py
submission_staging/: id_123456789_987654321.py  id_207490913_318931672.py
tests/: conftest.py
tests/Latency_Tests/: test_enforce_time_cap.py  test_latency.py
tests/Regression_Tests/: baseline_utilities.json  test_regression.py
(+12 files in other folders)
